Sun Aug 11 15:10:40 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_enc_symname_type): allow ID_ATTRSET for ID_INSTANCE,
	  ID_GLOBAL, ID_CLASS, ID_JUNK too.  [Bug #8756]

Sun Aug 11 13:17:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* include/ruby/encoding.h: Reduce ENCODING_INLINE_MAX to 127 as this
	  should be sufficient to represent all the encodings Ruby supports.

Sun Aug 11 11:54:38 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): New method.
	  This is accepted in the meeting:
	  https://bugs.ruby-lang.org/projects/ruby/wiki/DevelopersMeeting20130809
	  This method is accepted as a CRuby feature.
	  I.e. Other Ruby implementations don't need to implement it.
	  [ruby-core:56087] [Feature #8658]

Sun Aug 11 10:40:48 2013  Zachary Scott  <e@zzak.io>

	* lib/time.rb: [DOC] Correcting rdoc visibility of time.rb constants
	  Reported by Tanaka Akira [ruby-core:56517]

Sun Aug 11 04:48:14 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (rb_str_normalize_ospath):
	  HFS Plus (Mac OS Extended) uses a variant of Normal Form D in which
	  U+2000 through U+2FFF, U+F900 through U+FAFF, and U+2F800 through
	  U+2FAFF are not decomposed (this avoids problems with round trip
	  conversions from old Mac text encodings).
	  http://developer.apple.com/library/mac/qa/qa1173/_index.html
	  Therefore fix r42457 to exclude the range.

Sun Aug 11 03:26:07 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bitsize): Fix a conditional expression.

Sun Aug 11 02:44:03 2013  Zachary Scott  <e@zzak.io>

	* lib/time.rb: [DOC] Document constants by @markijbema [Fixes GH-377]
	  https://github.com/ruby/ruby/pull/377

Sun Aug 11 01:28:52 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Revert r42458.
	  It removes the HAVE_CLOCK_GETTIME from config.h.
	  http://www.rubyist.net/~akr/chkbuild/debian/ruby-trunk/log/20130809T044800Z.diff.html.gz

Sat Aug 10 13:53:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
